
* bug 3131 fixed - version 'GLIBC_2.4' not found with the binary version under some GNU/Linux distro

* bug 3314 fixed - linspace primitive - rev 27707 - removed use of "ones" and use colon (i.e. :) operator only

* bug 3322 fixed - trimmean primitive - rev 27627 - Added verbose option, added unit tests, updated doc.

* bug 3512 fixed - regexp could return incorrect results

* bug 3530 fixed - Check that X11/Xlib.h is available since the Tk header needs it

* bug 3529 fixed - rmdir was trying to change the permission on the file/directory. This behavior has been removed.

* bug 3540 fixed - With the linux binary version, a symbolic link of <SCILAB INSTALL PATH>/bin/scilab in /usr/local/bin (for example) did not work.

* bug 3546 fixed - frmag is broken when called with hn given by a vector of coefficients instead of a polynomial.

* bug 3551 fixed - bvodeS and bvode hang and close Scilab 5.0.1

* bug 3549 fixed - machine.h was including PATH_MAX.h, BOOL.h and PARAMS.h, includes have been cleaned up.

* bug in the script in charge of the dispatch of localization files fixed (tools/localization/dispatchLocalizationFile.sh)

* bug 3559 fixed - paths in examples.bat in SCI/modules/javasci/examples were wrong

* bug 3556 fixed - derivative was not supporting non compiled functions

* bug 3565 fixed - bad detection of the IBM JDK

* bug 3566, 3567 fixed - sort and gsort didn't sort correctly complex matrix.

* bug 3598 fixed - ls(1) or cd(1) or dir(1) or help(1), scilab crashes

* bug 3624 fixed - Nan returned when multiplying large zero vector by its transpose.

* bug 3602 fixed - format("e",dd) was causing a bug in gettklib (format of the number)

* bug 3628 fixed - Problem with cdouble type arguments in intersci.

* bug 3607 fixed - Wrong values in Java configuration was causing the memory issues

* bug 3630 fixed - functions added by 'addinter' are not visible by 'what'

* bug 3604 fixed - Problems with getting Frame uicontrol position (Scilab crash)