@@ -134,13 +134,19 @@ function ilib_link_gen_loader(names,flag,loadername,libs,libname)
   
   lib_suf = getdynlibext();
   if libname=="" then libname = names(1);end 
-    
+  
+  if ( length(libname) + length('_path') ) > 24 then
+   shortlibname_path = part(libname,1:(24 - length('_path')));
+  else
+   shortlibname_path = libname;
+  end
+  
   fd=mopen(loadername,"w");
   mfprintf(fd,"// ------------------------------------------------------\n");
   mfprintf(fd,"// generated by builder.sce: Please do not edit this file\n");
   mfprintf(fd,"// ------------------------------------------------------\n");
   mfprintf(fd,"\n");
-  mfprintf(fd,"%s_path = get_absolute_file_path(''%s'');\n",libname,basename(loadername+'.x'));
+  mfprintf(fd,"%s_path = get_absolute_file_path(''%s'');\n",shortlibname_path,basename(loadername+'.x'));
   mfprintf(fd,"\n");
   
   //** first "link" : external libraries 
@@ -155,7 +161,7 @@ function ilib_link_gen_loader(names,flag,loadername,libs,libname)
          else
            [diri, basenamei, exti] = fileparts(libs(i));
            if (diri == '') then
-            mfprintf(fd,"link(%s_path+''%s%s'');\n",libname,libs(i),lib_suf);
+            mfprintf(fd,"link(%s_path+''%s%s'');\n",shortlibname_path,libs(i),lib_suf);
            else
             mfprintf(fd,"link(''%s%s'');\n",libs(i),lib_suf);
            end
@@ -164,7 +170,7 @@ function ilib_link_gen_loader(names,flag,loadername,libs,libname)
   end  
   
   //** second "link" : user defined functions  
-  mfprintf(fd,"link(%s_path+''lib%s%s'',[",libname,libname,lib_suf);
+  mfprintf(fd,"link(%s_path+''lib%s%s'',[",shortlibname_path,libname,lib_suf);
   
   names = names(:)';
   n = size(names,'*');
@@ -188,7 +194,7 @@ function ilib_link_gen_loader(names,flag,loadername,libs,libname)
 
   mfprintf(fd,"''%s'');\n",flag);
   mfprintf(fd,"// remove temp. variables on stack\n");
-  mfprintf(fd,"clear %s_path;\n",libname);
+  mfprintf(fd,"clear %s_path;\n",shortlibname_path);
   mfprintf(fd,"clear get_file_path;\n");
   mfprintf(fd,"// ------------------------------------------------------\n");
   mclose(fd);
