@@ -25,16 +25,22 @@ function ilib_gen_loader(name,tables,libs)
     end 
   end
   
+  if length(name) + length('_path') > 24 then
+    name_path = part(name,1:(24 - length('_path')));
+  else
+    name_path = name;
+  end
+  
   fd=mopen('loader.sce',"wt");
   mfprintf(fd,"// ------------------------------------------------------\n");
   mfprintf(fd,"// generated by builder.sce: Please do not edit this file\n");
   mfprintf(fd,"// ------------------------------------------------------\n");
   mfprintf(fd,"\n");
-  mfprintf(fd,"%s_path = get_file_path(''loader.sce'');\n",name);
+  mfprintf(fd,"%s_path = get_file_path(''loader.sce'');\n",name_path);
 
   nl = size(libs,'*');
   for i=1:nl 
-    mfprintf(fd,"link(%s_path+''/%s%s'');\n",name,libs(i),getdynlibext());
+    mfprintf(fd,"link(%s_path+''/%s%s'');\n",name_path,libs(i),getdynlibext());
   end 
 
   if L == 1 then 
@@ -47,11 +53,11 @@ function ilib_gen_loader(name,tables,libs)
     end
     mfprintf(fd,"];\n");
 
-    mfprintf(fd,"addinter(%s_path+''/%s%s'',''%s'',list_functions);\n",name, ..
+    mfprintf(fd,"addinter(%s_path+''/%s%s'',''%s'',list_functions);\n",name_path, ..
 	              name,getdynlibext(),name);
   else
     // on link then a set of addinter 
-    mfprintf(fd,"ilib = link(%s_path+filesep()+''%s%s'');\n",name, ..
+    mfprintf(fd,"ilib = link(%s_path+filesep()+''%s%s'');\n",name_path, ..
                 name,getdynlibext());
     for itable=1:L 
       // loop on a list of tables 
@@ -69,7 +75,7 @@ function ilib_gen_loader(name,tables,libs)
   end
   
   mfprintf(fd,"// remove temp. variables on stack\n");
-  mfprintf(fd,"clear %s_path;\n",name);
+  mfprintf(fd,"clear %s_path;\n",name_path);
   mfprintf(fd,"clear list_functions;\n");
   mfprintf(fd,"clear get_file_path;\n");
   mfprintf(fd,"// ------------------------------------------------------\n");
