@@ -1,0 +1,42 @@
+// =============================================================================
+// Scilab ( http://www.scilab.org/ ) - This file is part of Scilab
+// Copyright (C) 2008 - DIGITEO - Allan CORNET
+//
+//  This file is distributed under the same license as the Scilab package.
+// =============================================================================
+
+// <-- Non-regression test for bug 3647 -->
+//
+// <-- Bugzilla URL -->
+// http://bugzilla.scilab.org/show_bug.cgi?id=3647
+//
+// <-- Short Description -->
+// C functions having more than 23 characters are not usable with scilab
+
+
+foo=['void verylongfunctionnamewithmore24characters(double *a,double *b,double *c)';
+     '{ *c = *a + *b; }'  ];
+
+// we use TMPDIR for compilation 
+	
+if ~c_link('foo') then
+  curPath = getcwd(); 
+  chdir(TMPDIR); 
+  mputl(foo,'foo.c');
+  
+  ilib_for_link(['verylongfunctionnamewithmore24characters'],'foo.o',[],"c");
+  
+  // disable message
+  warning_mode = warning('query');
+  warning('off');
+  // load the shared library 
+  exec loader.sce ;
+  // enable message
+  warning(warning_mode);
+  chdir(curPath) 
+end	
+
+//5+7 by C function
+v = call('verylongfunctionnamewithmore24characters',5,1,'d',7,2,'d','out',[1,1],3,'d')
+if v <> 12 then pause,end
+//================================================
