@@ -86,3 +86,5 @@ Bug fixes:
 * bug 3630 fixed - functions added by 'addinter' are not visible by 'what'
 
 * bug 3604 fixed - Problems with getting Frame uicontrol position (Scilab crash)
+
+* bug 3647 fixed - 'call' doesn't manage external functions named with more 23 characters
